append `-XX:MaxPermSize=768m -Xmx768m` to `JAVA_OPTS`